--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,7 +56,7 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/best_sale_product"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="150dp"
                     android:orientation="horizontal"
                     android:layout_marginTop="16dp">
 
@@ -83,7 +83,7 @@
                   <androidx.recyclerview.widget.RecyclerView
                       android:id="@+id/newest_products"
                       android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
+                      android:layout_height="150dp"
                       android:orientation="horizontal"
 
                       android:layout_marginTop="16dp">
@@ -111,7 +111,7 @@
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/best_quality_product"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="150dp"
                         android:orientation="horizontal"
 
                         android:layout_marginTop="16dp">
