--- a/app/src/main/res/layout/card_view_holder.xml
+++ b/app/src/main/res/layout/card_view_holder.xml
@@ -13,9 +13,11 @@
 
         <ImageView
             android:id="@+id/product_image_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             app:layout_constraintTop_toTopOf="parent"
+             app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             android:layout_marginLeft="12dp"
             android:layout_marginRight="12dp"
             android:scaleType="centerCrop" />
