--- a/app/src/main/res/layout/card_view_holder.xml
+++ b/app/src/main/res/layout/card_view_holder.xml
@@ -29,13 +29,7 @@
             android:padding="4dp"
             app:layout_constraintTop_toBottomOf="@id/product_image_view"/>
 
-        <LinearLayout
-            android:id="@+id/dividerLine"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf= "@+id/product_name_text_view"
-            android:divider="?attr/dividerVertical"
-            android:orientation="vertical" />
+
 
         <TextView
             android:id="@+id/product_price_text_view"
@@ -43,7 +37,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/light_green_A700"
             android:padding="4dp"
-            app:layout_constraintTop_toBottomOf="@id/dividerLine"/>
+            app:layout_constraintTop_toBottomOf="@id/product_name_text_view"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
