--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view_holder"
@@ -18,14 +17,21 @@
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
             app:cardCornerRadius="4dp">
+
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
+                <androidx.appcompat.widget.Toolbar
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:background="@color/colorPrimary">
+
+
+                </androidx.appcompat.widget.Toolbar>
 
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/product_detail_image_view"
@@ -39,13 +45,15 @@
 
                 <androidx.appcompat.widget.AppCompatRatingBar
                     android:id="@+id/ratebar"
-                    android:layout_width="wrap_content"
+                    style="?attr/ratingBarStyleSmall"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:isIndicator="true"
                     android:numStars="5"
-                    android:padding="4dp"
-                    android:stepSize="0.2" />
+                    android:padding="10dp"
+                    android:stepSize="0.2"
+                    android:theme="@style/RatingBar" />
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/detail_new_product"
@@ -75,19 +83,22 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+
+
+
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/desc_holder"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:cardCornerRadius="15dp"
-            app:layout_constraintTop_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:id="@+id/continue_linear"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <androidx.core.widget.NestedScrollView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
